--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,9 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": false,
-		"moduleResolution": "bundler"
+		"moduleResolution": "bundler",
 	}
+	
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
