--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-	"name": "dashboard",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.22.0",
-		"clsx": "^2.1.1",
-		"cmdk-sv": "^0.0.19",
-		"lucide-svelte": "^0.506.0",
-		"svelte": "^5.0.0",
-		"tailwind-merge": "^3.2.0",
-		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^3.4.17",
-		"vite": "^6.2.6"
-	},
-	"dependencies": {
-		"@lucide/svelte": "^0.507.0",
-		"class-variance-authority": "^0.7.1"
-	}
+  "name": "dashboard",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/kit": "^2.16.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "^0.22.0",
+    "clsx": "^2.1.1",
+    "cmdk-sv": "^0.0.19",
+    "lucide-svelte": "^0.506.0",
+    "msw": "^2.7.6",
+    "svelte": "^5.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.6"
+  },
+  "dependencies": {
+    "@lucide/svelte": "^0.507.0",
+    "class-variance-authority": "^0.7.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "static"
+    ]
+  }
 }
