--- a/package.json
+++ b/package.json
@@ -1,37 +1,30 @@
 {
-  "name": "dashboard",
+  "name": "voice-ai-chat",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.1",
-  "type": "module",
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.17"
+  },
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "svelte-kit sync || echo ''"
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "autoprefixer": "^10.4.20",
-    "bits-ui": "^0.22.0",
-    "clsx": "^2.1.1",
-    "cmdk-sv": "^0.0.19",
-    "lucide-svelte": "^0.506.0",
-    "msw": "^2.7.6",
-    "svelte": "^5.0.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.6"
-  },
-  "dependencies": {
-    "@lucide/svelte": "^0.507.0",
-    "class-variance-authority": "^0.7.1"
-  },
-  "msw": {
-    "workerDirectory": [
-      "static"
-    ]
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.21.0",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "postcss-loader": "^7.0.1",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "dotenv": "^16.0.3"
   }
 }
